--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>RecycleSMART Desktop 1.0.2 Windows</h1>
+      <h1>RecycleAI 1.1.1 Windows</h1>
       <div id="drop-area">
         <p>Drag & Drop an image here, or click below this text to select one</p>
         <input type="file" id="fileInput" name="fileInput" accept="image/*" />
