--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RecycleSMART</title>
+    <title>RecycleAI</title>
     <link rel="stylesheet" href="styles.css">
 
     
   </head>
   <body>
     <div class="container">
-      <h1>RecycleAI 1.1.1 Windows</h1>
+      <h1>RecycleAI 1.1.2 Windows</h1>
       <div id="drop-area">
         <p>Drag & Drop an image here, or click below this text to select one</p>
         <input type="file" id="fileInput" name="fileInput" accept="image/*" />
