--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>RecycleAI Desktop 1.2.0</h1>
+      <h1>RecycleAI Desktop 1.2.1</h1>
       <!-- File Upload Section -->
       <div id="drop-area">
         <p>Drag & Drop an image here, or click below this text to select one</p>
@@ -22,7 +22,7 @@
 
       <!-- Buttons Section -->
       <div>
-        <button id="switchToWebcam">Switch to Webcam (Faulty)</button>
+        <button id="switchToWebcam">Switch to Webcam</button>
         <button id="switchToFile" style="display:none;">Switch to File</button>
         <button id="takePictureButton" style="display:none;">Take Picture</button>
       </div>
